--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "the_vault_v2.0",
+  "name": "edify_it",
   "version": "1.0.0",
-  "description": "Banking made easy",
+  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,17 +9,11 @@
   "author": "Edidiong Obodom",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
-    "connect-ensure-login": "^0.1.1",
-    "connect-sqlite3": "^0.9.13",
-    "dotenv": "^16.0.1",
+    "dayjs": "^1.11.5",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "express-session": "^1.17.3",
-    "mongoose": "^6.3.5",
-    "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^7.1.2"
+    "mongoose": "^6.3.5"
   }
 }
